# TouchController-Monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  NEWS-en.md  NEWS-zh.md  README.md  build.gradle.kts  bundle.sh  gradle.properties  maven_install.json  properties.bzl  release.sh  settings.gradle.kts
.github/workflows/: build.yml
.woodpecker/: mdbook.yml
armorstand/: BUILD.bazel  properties.bzl
armorstand/client/: BUILD.bazel
armorstand/client/java/top/fifthlight/armorstand/mixin/: CameraMixin.java  EntityRenderDispatcherMixin.java  FrustumMixin.java
armorstand/client/kotlin/top/fifthlight/armorstand/: PlayerRenderer.kt
armorstand/client/kotlin/top/fifthlight/armorstand/manage/scan/: FileHandler.kt  ModelLoaderFileHandler.kt  ModelScannerImpl.kt
armorstand/client/kotlin/top/fifthlight/armorstand/util/: ModelLoaders.kt
armorstand/fabric_client/: BUILD.bazel
armorstand/fabric_main/: BUILD.bazel
armorstand/game/: BUILD.bazel
armorstand/main/: BUILD.bazel
armorstand/neoforge_client/: BUILD.bazel
armorstand/neoforge_main/: BUILD.bazel
authproxy/: BUILD.bazel  MainMixin.java
authproxy/resources/: fabric.mod.json
blazerod/: BUILD.bazel  properties.bzl
blazerod/example/ball_block/: BUILD.bazel
blazerod/model/: model_info_jar.bzl
blazerod/model/model-assimp/: AssimpLoader.kt  BUILD.bazel
blazerod/model/model-base/: BUILD.bazel
blazerod/model/model-base/src/main/kotlin/top/fifthlight/blazerod/model/: Metadata.kt
blazerod/model/model-base/src/main/kotlin/top/fifthlight/blazerod/model/animation/: AnimationContext.kt
blazerod/model/model-base/src/main/kotlin/top/fifthlight/blazerod/model/util/: ReadUtil.kt  ValueWrappers.kt
blazerod/model/model-bedrock/: BUILD.bazel  BedrockModelLoader.kt
blazerod/model/model-bedrock/src/main/kotlin/top/fifthlight/blazerod/model/bedrock/: BedrockModelJsonLoader.kt  BedrockModelLoader.kt  GsonUtil.kt
blazerod/model/model-bedrock/src/main/kotlin/top/fifthlight/blazerod/model/bedrock/metadata/: ModelMetadata.kt
blazerod/model/model-formats/: BUILD.bazel  ModelFileLoaders.kt
blazerod/model/model-gltf/: BUILD.bazel  GltfBinaryLoader.kt  GltfLoader.kt  GltfTextLoader.kt
blazerod/model/model-gltf/test/: BUILD.bazel  GlbLoadTest.kt
blazerod/model/model-loader/: BUILD.bazel  ModelFileLoader.kt
blazerod/model/model-pmd/: BUILD.bazel  PmdLoader.kt
blazerod/model/model-pmx/: BUILD.bazel  PmxLoader.kt
blazerod/model/model-pmx/test/: BUILD.bazel
blazerod/model/model-vmd/: BUILD.bazel  VmdLoader.kt
blazerod/model/src/main/resources/: fabric.mod.json
blazerod/render/: BUILD.bazel
blazerod/render/api/: BUILD.bazel
blazerod/render/api/resource/: ModelInstance.kt
blazerod/render/fabric/: BUILD.bazel
blazerod/render/game/: BUILD.bazel
blazerod/render/main/runtime/: ModelInstanceImpl.kt  RenderSceneImpl.kt
blazerod/render/neoforge/: BUILD.bazel
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/: BlazeRod.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/animation/context/: BaseAnimationContext.kt  EntityAnimationContext.kt  LivingEntityAnimationContext.kt  PlayerEntityAnimationContext.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/: ModelInstance.kt  RenderTask.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/load/: ModelLoadInfo.kt  ModelPreprocessor.kt  SceneReconstructor.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/render/: BlazerodVertexFormats.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/util/: MathUtil.kt
buildSrc/: build.gradle.kts
combine/backend/minecraft/1.21.8/fabric/: BUILD.bazel  fabric.mod.json
combine/data/: BUILD.bazel
combine/example/: BUILD.bazel
combine/widget/: Select.kt
game/: game.bzl
game/1.16.5/: BUILD.bazel
game/1.17.1/: BUILD.bazel
game/1.20.6/: BUILD.bazel  maven_install_fabric.json
game/1.21/: BUILD.bazel  maven_install_fabric.json
game/1.21.1/: BUILD.bazel  maven_install_fabric.json
game/1.21.10/: BUILD.bazel  maven_install_fabric.json
game/1.21.11/: BUILD.bazel
game/1.21.3/: BUILD.bazel  maven_install_fabric.json
game/1.21.4/: BUILD.bazel  maven_install_fabric.json
game/1.21.5/: BUILD.bazel  maven_install_fabric.json
game/1.21.6/: BUILD.bazel  maven_install_fabric.json
game/1.21.7/: BUILD.bazel  maven_install_fabric.json
game/1.21.8/: BUILD.bazel  maven_install_fabric.json
game/1.21.9/: BUILD.bazel  maven_install_fabric.json
gradle/: libs.versions.toml
mod/: BUILD.bazel
mod/common/: build.gradle.kts
mod/common-1.21.3-1.21.4/: build.gradle.kts
mod/common-1.21.x/: build.gradle.kts
mod/common-fabric/: build.gradle.kts  rules.pro
mod/common-forge/: rules.pro
mod/common-lwjgl3/: build.gradle.kts
mod/common-neoforge/: build.gradle.kts  rules.pro
mod/fabric-1.20.1/: gradle.properties
mod/forge-1.12.2/: gradle.properties
mod/forge-1.16.5/: gradle.properties
mod/forge-1.20.1/: gradle.properties
module/: blazerod.MODULE.bazel  combine.MODULE.bazel  fabric.MODULE.bazel  iris.MODULE.bazel  minecraft.MODULE.bazel  neoforge.MODULE.bazel  rules.MODULE.bazel  rust.MODULE.bazel  sodium.MODULE.bazel  touchcontroller.MODULE.bazel  zig_cc.MODULE.bazel
proxy-client/: build.gradle.kts
proxy-client-android/: build.gradle.kts
proxy-common/src/: protocol.cpp  protocol.hpp
proxy-linux/: CMakeLists.txt  build.gradle.kts
proxy-linux/src/: wayland.cpp  wayland.hpp
proxy-server-android/src/: jni.rs
proxy-windows/src/: lib.cpp  lib.hpp
repo/: neoform.bzl
rule/: merge_library.bzl  mod_info_jar.bzl
rule/tiny_remapper_worker/: BUILD.bazel  TinyRemapperWorker.java
rule/vineflower/: BUILD.bazel  (+1 more)
touchcontroller/: properties.bzl
touchcontroller/buildinfo/: BUILD.bazel  BuildInfo.template.kt
touchcontroller/common/about/: BUILD.bazel
touchcontroller/common/platform/win32/: BUILD.bazel
touchcontroller/proxy/server/android/: BUILD.bazel  jni.rs
touchcontroller/proxy/server/linux/: BUILD.bazel  wayland.cpp
touchcontroller/proxy/server/windows/: BUILD.bazel  input.cpp  input.hpp  lib-legacy.cpp  lib.cpp
(+716 files in other folders)
