load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "authproxy",
    resource_strip_prefix = "authproxy/resources",
    resources = glob(["resources/**"]),
    srcs = ["MainMixin.java"],
    deps = [
        "@minecraft//1.21.8:client",
        "@minecraft//1.21.8:client_libraries",
        "@maven_fabric_1_21_8//:net_fabricmc_sponge_mixin",
    ],
    javacopts = ["--release", "8"],
)
