"MODULE.bazel BlazeRod part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_blazerod",
    artifacts = [
        "org.lwjgl:lwjgl:3.3.3",
        "org.lwjgl:lwjgl-assimp:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-windows:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-windows-x86:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-windows-arm64:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-linux-arm32:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-linux-arm64:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-linux:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-macos:3.3.3",
        "org.lwjgl:lwjgl-assimp:jar:natives-macos-arm64:3.3.3",
        "org.javassist:javassist:3.30.2-GA",
    ],
    fetch_sources = True,
    lock_file = "//blazerod:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
)
use_repo(maven, "maven_blazerod")