"MODULE.bazel Fabric part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

fabric_versions = {
    "1.20.6": {
        "api": "0.100.8+1.20.6",
        "loader": "0.16.14",
        "modmenu": "10.0.0",
    },
    "1.21": {
        "api": "0.102.0+1.21",
        "loader": "0.16.14",
        "modmenu": "11.0.3",
    },
    "1.21.1": {
        "api": "0.110.0+1.21.1",
        "loader": "0.16.14",
        "modmenu": "11.0.3",
    },
    "1.21.3": {
        "api": "0.112.1+1.21.3",
        "loader": "0.16.14",
        "modmenu": "12.0.0",
    },
    "1.21.4": {
        "api": "0.113.0+1.21.4",
        "loader": "0.16.14",
        "modmenu": "13.0.0-beta.1",
    },
    "1.21.5": {
        "api": "0.119.5+1.21.5",
        "loader": "0.16.14",
        "modmenu": "14.0.0-rc.2",
    },
    "1.21.6": {
        "api": "0.126.1+1.21.6",
        "loader": "0.16.14",
        "modmenu": "15.0.0-beta.3",
    },
    "1.21.7": {
        "api": "0.128.2+1.21.7",
        "loader": "0.16.14",
        "modmenu": "15.0.0-beta.3",
    },
    "1.21.8": {
        "api": "0.129.0+1.21.8",
        "loader": "0.16.14",
        "modmenu": "15.0.0-beta.3",
    },
    "1.21.9": {
        "api": "0.134.0+1.21.9",
        "loader": "0.17.0",
        "modmenu": "16.0.0-rc.1",
    },
}

[
    (
        maven.install(
            name = "maven_fabric_%s" % version,
            artifacts = [
                "net.fabricmc:intermediary:%s:v2" % version,
                "net.fabricmc.fabric-api:fabric-api:%s" % entry["api"],
                "net.fabricmc:fabric-loader:%s" % entry["loader"],
                "com.terraformersmc:modmenu:%s" % entry["modmenu"],
            ],
            repositories = [
                "https://maven.fabricmc.net/",
                "https://repo1.maven.org/maven2/",
                "https://maven.terraformersmc.com/",
            ],
            lock_file = "//game/%s:maven_install_fabric.json" % version,
            fetch_sources = True,
        ),
        use_repo(maven, "maven_fabric_%s" % version),
    )
    for version, entry in fabric_versions.items()
]

maven.install(
    artifacts = [
        "net.fabricmc:fabric-language-kotlin:1.13.5+kotlin.2.2.10",
    ],
)
