load("//:properties.bzl", "home_page", "issue_tracker", "license", "mod_version", "sources_page")
load("//rule:merge_library.bzl", "kt_merge_library", "merge_library_jar")
load("//rule:remap_jar.bzl", "remap_jar")

remap_jar(
    name = "remapped_deps",
    classpath = ["//game/1.21.8:game_client_intermediary"],
    from_namespace = "intermediary",
    inputs = [
        "@maven//:net_fabricmc_fabric_api_fabric_api",
    ],
    mapping = "//game/1.21.8:game_merged_mapping",
    mixin = True,
    remap_transitive_deps = True,
    remove_jar_in_jar = True,
    to_namespace = "named",
    visibility = ["//mod/src:__subpackages__"],
)

kt_merge_library(
    name = "fabric_main_unmapped",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    associates = [
        "//mod/src/main",
    ],
    merge_deps = [
        "//mod/src/main",
    ],
    resource_strip_prefix = "mod/src/fabric/resources",
    resources = glob(
        include = ["resources/**"],
        allow_empty = True,
    ),
    visibility = ["//mod:__subpackages__"],
    exports = [
        "//mod/src/main",
    ],
    deps = [
        ":remapped_deps",
        "//game/1.21.8:game_client_named",
        "@maven//:net_fabricmc_fabric_loader",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@minecraft//1.21.8:client_libraries",
    ],
)
