load("//:properties.bzl", "blazerod_version", "game_version", "home_page", "issue_tracker", "license", "neoforge_version", "sources_page")
load("//rule:merge_library.bzl", "kt_merge_library", "merge_library_jar")
load("//rule:remap_jar.bzl", "remap_jar")

kt_merge_library(
    name = "neoforge_main_unmapped",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    merge_deps = [
        "//mod/src/main",
    ],
    resource_strip_prefix = "mod/src/neoforge/resources",
    resources = glob(
        include = ["resources/**"],
        allow_empty = True,
    ),
    visibility = ["//mod:__subpackages__"],
    deps = [
        "//game/1.21.8:neoforge_named",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@neoforge_1_21_8//:neoforge_deps",
    ],
)
