load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.21.9:client",
    client_mappings = "@minecraft//1.21.9:client_mappings",
    intermediary = "@maven_fabric_1.21.9//:net_fabricmc_intermediary_v2",
    neoforge = "@neoforge_1_21_9//:compiled_with_neoforge",
    server = "@minecraft//1.21.9:server",
    version = "1.21.9",
)
