load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//blazerod/model:model_info_jar.bzl", "model_info_jar")

model_info_jar(
    name = "mod_info_json",
    substitutions = {
        "${mod_id}": "blazerod-model-loader",
        "${name}": "BlazeRod model loader",
        "${description}": "BlazeRod model loader API",
    },
)

kt_jvm_library(
    name = "model-loader",
    srcs = glob(["**/*.kt"]),
    resource_jars = [
        ":mod_info_json",
        "//blazerod:icon",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:org_joml_joml",
        "//blazerod/model/model-base",
    ],
)
