load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//blazerod:properties.bzl", "blazerod_version")
load("//rule:merge_library.bzl", "kt_merge_library")

expand_template(
    name = "api_info",
    out = "BlazeRodApi.kt",
    substitutions = {
        "${version}": blazerod_version,
    },
    template = "BlazeRodApi.template.kt",
)

kt_merge_library(
    name = "api",
    srcs = [":api_info"],
    visibility = ["//visibility:public"],
    deps = [
        "//blazerod/render/game:remapped_client_access_widened_named",
    ],
)
