load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "win32",
    srcs = glob(["*.kt"]),
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/common/platform",
        "//touchcontroller/common/gal",
        "//touchcontroller/proxy/message",
        "@maven//:org_slf4j_slf4j_api",
    ],
)