load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "android",
    srcs = glob(["*.rs"]),
    crate_name = "proxy_server_android",
    tags = ["clippy"],
    target_compatible_with = ["@platforms//os:android"],
    deps = [
        "@crates//:tokio",
        "@crates//:log",
        "@crates//:android_logger",
        "@crates//:jni",
        "@crates//:bytemuck",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
)
