load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "input",
    srcs = ["input.cpp"],
    hdrs = ["input.hpp"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = ["//touchcontroller/proxy/server/common/cpp"],
    defines = [
        "WIN32_LEAN_AND_MEAN",
    ],
)

cc_library(
    name = "lib",
    srcs = [
        "lib.cpp",
        "lib.hpp"
    ],
    target_compatible_with = ["@platforms//os:windows"],
    # Target Windows 10.
    defines = [
        "WINVER=0x0A00",
        "_WIN32_WINNT=0x0A00",
    ],
    deps = [
        "@rules_jni//jni",
        "//touchcontroller/proxy/server/common/cpp",
        ":input",
    ],
)

cc_library(
    name = "lib-legacy",
    srcs = [
        "lib-legacy.cpp",
        "lib-legacy.hpp"
    ],
    target_compatible_with = ["@platforms//os:windows"],
    # Target Windows 7.
    defines = [
        "WINVER=0x0601",
        "_WIN32_WINNT=0x0601",
    ],
    deps = [
        "@rules_jni//jni",
        "//touchcontroller/proxy/server/common",
        ":input",
    ],
)
